# PHAS0100Assignment2

./: README.md
app/: CMakeLists.txt  main.cpp  nBodySystemSimulator.cpp  solarSystemSimulator.cpp
include/: manyBodySystem.hpp  particle.hpp
src/: CMakeLists.txt  manyBodySystem.cpp  particle.cpp
test/: CMakeLists.txt  test.cpp
